# dilmaj

./: .codecov.yml  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  COVERAGE_SETUP.md  DEBUG_GUIDE.md  LICENSE  Makefile  README.md  SCRIPT_CLEANUP_SUMMARY.md  generate_coverage_badge.sh  generate_coverage_badge_simple.sh  pyproject.toml  setup.sh  simple_badge.py  test_precommit.py  test_preprocessing.py  test_setup.py
.github/workflows/: coverage-badge.yml  test-and-coverage.yml
dilmaj/: __init__.py  cli.py  config.py  exceptions.py  processor.py  utils.py
dilmaj/providers/: __init__.py  base.py  factory.py  openai_provider.py
pdf_translator/: __init__.py  cli.py  config.py  exceptions.py  processor.py  utils.py
pdf_translator/extractors/: __init__.py  base.py  docx_extractor.py  pdf_extractor.py
pdf_translator/providers/: base.py  factory.py  local_provider.py
scripts/: generate_colored_badge.py
tests/: __init__.py  test_cli.py  test_cli_extract_and_dryrun.py  test_config.py  test_exceptions.py  test_extractors.py  test_processor.py  test_providers.py  test_providers_base.py  test_utils.py  test_utils_preprocess.py
