[tool.poetry]
name = "pdf-translator"
version = "0.1.0"
description = "A CLI tool to slice PDF files per page and process each page with GPT models"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pdf_translator"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
langchain = "^0.1.0"
langchain-openai = "^0.1.0"
pypdf = "^4.0.0"
tenacity = "^8.2.3"
python-dotenv = "^1.0.0"
rich = "^13.7.0"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdf-translator = "pdf_translator.cli:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
